--- a/README.org
+++ b/README.org
@@ -2,9 +2,8 @@
 
 Convert CSV (in a reader macro, or in a file) in to Lisp lists.
 
-|---------+-------------------------------------------|
-| source  | git:https://github.com/equwal/CSV.git   |
-| commit  | f122dd6  |
-| systems | CSV |
-|---------+-------------------------------------------|
-
+|---------+---------------------------------------|
+| source  | git:https://github.com/equwal/CSV.git |
+| commit  | f122dd6                               |
+| systems | csv                                   |
+|---------+---------------------------------------|
